--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
 
 <div id="xcontainer">
 	
+	<div id='header_container'>
 	<div id='xheader'>
 
 		<div id='xtopbannertitle'>
@@ -73,7 +74,11 @@
 			</div>
 			-->
 		</div>
+		
+		<div class='clear_float'>
+		</div>
 
+	</div>
 	</div>
 	
 	<!--
