--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,8 @@
 
 <div id="xcontainer">
 	
-	<div id='header_container'>
 	<div id='xheader'>
+	<div id='header_content'>
 
 		<div id='xtopbannertitle'>
 			<%= link_to("HomeBloodPressure.co.uk", root_path) %>
