--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -167,51 +167,99 @@
           color: #000000;
           margin: 5px 0px 0px 25px;
         }
+      }
         
-        #links {
-          width: 450px;
-          margin-left: auto;
-          margin-right: auto;
-          margin-top: 30px;
+      #links {
+        width: 540px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-bottom: 30px;
           
-          .info_links {
-            float: left;
-            width: 130px;
+        .info_link {
+          float: left;
+          width: 150px;
+          margin: 0px 10px 0px 10px;
+          padding: 5px;
             
-            &:link, &:visited {
-              color:#000000;
-            }
+          &:link, &:visited {
+            color:#000000;
+          }
       
-             &:hover {
-              text-decoration:none;
-              color:#000000;
-              background-color: #e7f0fd;
-            }
-            
-            .link_title {
-              display: block;
-              background-color: #032F76;
-              padding: 3px;
+          &:hover {
+            text-decoration:none;
+            color:#000000;
+            background-color: #e7f0fd;
               
-              .link_title_content {
-                display: block;
-                width: 100%;
-                background-color: #032F76;
-                font-size: 12pt;
-                color: #ffffff;
-                text-align: center;
+            #link_title_1 {
+              background-color: #033076;
+                
+              #link_title_content_1 {
+                background-color: #033076;
               }
             }
-            
-            img {
-              margin: 9px;
+              
+            #link_title_2 {
+              background-color: #0844A4;
+                
+              #link_title_content_2 {
+                background-color: #0844A4;
+              }
             }
-            
-            .link_text {
-              font-size:10pt;
-              color: #000000;
-              margin: 0px 5px 0px 5px;
+              
+            #link_title_3 {
+              background-color: #0C59CF;
+                
+              #link_title_content_3 {
+                background-color: #0C59CF;
+              }
             }
+          }
+            
+          #link_title_1, #link_title_2, #link_title_3 {
+            display: block;
+            padding: 3px 15px 3px 15px;
+              
+            #link_title_content_1, #link_title_content_2, #link_title_content_3 {
+              display: block;
+              width: 100%;
+              font-size: 12pt;
+              color: #ffffff;
+              text-align: center;
+            }
+          }
+            
+          #link_title_1 {
+            background-color: #021F54;
+              
+            #link_title_content_1 {
+              background-color: #021F54;
+            }
+          }
+            
+          #link_title_2 {
+            background-color: #033076;
+              
+            #link_title_content_2 {
+              background-color: #033076;
+            }
+          }
+            
+          #link_title_3 {
+            background-color: #0844A4;
+              
+            #link_title_content_3 {
+              background-color: #0844A4;
+            }
+          }
+            
+          img {
+            margin: 10px 16px 10px 16px;
+          }
+            
+          .link_text {
+            font-size:10pt;
+            color: #000000;
+            margin: 0px 5px 0px 5px;
           }
         }
       }
