--- a/app/views/static_pages/layout_test.html.erb
+++ b/app/views/static_pages/layout_test.html.erb
@@ -1,4 +1,4 @@
-<div id='xmain'>
+<div id='main'>
 	<div id='strip1'>
 		<div id='strip1_content'>
 			<h2>The best blood pressure treatment</h2>
@@ -58,12 +58,12 @@
 				<span class='link_text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.</span>
 			<% end %>
 			<%= link_to(root_path, :class => 'info_link') do %>
-				<span id='link_title_2'><span id='link_title_content_2'>Measuring blood pressure?</span></span>
+				<span id='link_title_2'><span id='link_title_content_2'>Measuring blood pressure</span></span>
 				<%= image_tag("woman_taking_bp_small.jpg", size: '118x100') %>
 				<span class='link_text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.</span>
 			<% end %>
 			<%= link_to(root_path, :class => 'info_link') do %>
-				<span id='link_title_3'><span id='link_title_content_3'>Treating blood pressure?</span></span>
+				<span id='link_title_3'><span id='link_title_content_3'>Treating blood pressure</span></span>
 				<%= image_tag("tablets_small.jpg", size: '118x100') %>
 				<span class='link_text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.</span>
 			<% end %>
