--- a/app/assets/stylesheets/current_bps.css.scss
+++ b/app/assets/stylesheets/current_bps.css.scss
@@ -10,7 +10,7 @@ h1 {
 
 
 
-#content {
+#xcontent {
   float: left;
   width: 935px;
   padding: 0px 0px 0px 15px;
@@ -29,7 +29,7 @@ h1 {
     color-stop(1, #DDE5F0)
   );
   
-  #main {
+  #xmain {
     float: left;
     width:930px;
     
@@ -480,7 +480,7 @@ h1 {
   #current_bp_sysbp, #current_bp_diabp {
     width: 70px;
     padding: 5px;
-    font-size: 12pt;
+    font-size: 1.2em;
     float: left;
     border-style:solid;
     border-width:2px;
@@ -489,13 +489,13 @@ h1 {
 
   #slash {
     float: left;
-    font-size: 16pt;
+    font-size: 1.4em;
     padding: 10px 10px 0px 10px;
   }
 
   #mmhg {
     float: left;
-    font-size: 8pt;
+    font-size: 0.8em;
     padding: 10px 0px 0px 10px;
   }
 }
