--- a/app/views/info/landing_page.html.erb
+++ b/app/views/info/landing_page.html.erb
@@ -12,31 +12,7 @@
 			<h3>Is my blood pressure too high?</h3>
 			<p>Enter some blood pressure readings and we'll answer that question right away!</p>
 			<div id='input_bp'>
-				<%= form_for(@current_bp) do |f| %>
-				<%= f.hidden_field :datetime, {:value => @bp_entry_details[:datetime]} %>
-				<%= f.hidden_field :reading_no, {:value => @bp_entry_details[:reading_no]} %>
-				<div id='input_bp_boxes'>
-    				<%= f.text_field(:sysbp) %>
-  					<div id='slash'>
-  						/
-  					</div>
-	    			<%= f.text_field(:diabp) %>
-  					<div id='mmhg'>
-  						mmHg
-  					</div>
-  				</div>
-  	
-  				<% if @current_bp.errors.any? %>
-  					<div id='error_wrapper'>
-						<%= error_messages_for "current_bp", "sysbp" %>
-					</div>
-  				<% end %>
-  	
-  				<div id="submit">
-	   				<%= f.submit 'Next', :class => 'button6' %>
-				</div>
-				
-				<% end %>
+				<%= render 'current_bps/form' %>
 				
 				<div class='clear_float'>
 				</div>
