--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -86,6 +86,7 @@ a:hover {
 
 #header_content {
   width: 90%;
+  max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
   background-color:#033076;
