--- a/app/views/info/info/measuring_blood_pressure.html.erb
+++ b/app/views/info/info/measuring_blood_pressure.html.erb
@@ -23,23 +23,24 @@
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
-			<h3>Information and advice</h3>
+			<h3>Measuring blood pressure</h3>
+			<h4>How can HomeBloodPressure.co.uk help me monitor my blood pressure?</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna.</p>
 		</div>
 		
 		<div id='links'>
-			<%= link_to(root_path, :class => 'info_link') do %>
-				<span id='link_title_1'><span id='link_title_content_1'>What is blood pressure?</span></span>
+			<%= link_to(info_how_do_i_measure_my_blood_pressure_path, :class => 'info_link') do %>
+				<span id='link_title_1'><span id='link_title_content_1'>How do I measure my blood pressure?</span></span>
 				<%= image_tag("heart_bp_monitor_small.jpg", size: '118x100') %>
 				<span class='link_text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.</span>
 			<% end %>
-			<%= link_to(root_path, :class => 'info_link') do %>
-				<span id='link_title_2'><span id='link_title_content_2'>Measuring blood pressure</span></span>
+			<%= link_to(info_when_should_i_measure_my_blood_pressure_path, :class => 'info_link') do %>
+				<span id='link_title_2'><span id='link_title_content_2'>When should I measure my blood pressure?</span></span>
 				<%= image_tag("woman_taking_bp_small.jpg", size: '118x100') %>
 				<span class='link_text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.</span>
 			<% end %>
-			<%= link_to(root_path, :class => 'info_link') do %>
-				<span id='link_title_3'><span id='link_title_content_3'>Treating blood pressure</span></span>
+			<%= link_to(info_how_do_i_choose_a_blood_pressure_machine_path, :class => 'info_link') do %>
+				<span id='link_title_3'><span id='link_title_content_3'>How do I choose a blood pressure machine?</span></span>
 				<%= image_tag("tablets_small.jpg", size: '118x100') %>
 				<span class='link_text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.</span>
 			<% end %>
