--- a/app/views/info/info/measuring_blood_pressure.html.erb
+++ b/app/views/info/info/measuring_blood_pressure.html.erb
@@ -1,7 +1,7 @@
 <div id='main'>
 	<div id='strip1'>
 		<div id='strip1_content'>
-			<h2>The best blood pressure treatment</h2>
+			<h2>How you can measure your blood pressure</h2>
 			<h3>FREE advice from UK GPs.</h3>
 			<h4>Online. Anytime.</h4>
 		</div>
@@ -9,15 +9,7 @@
 	
 	<div id='strip2'>
 		<div id='strip2_content'>
-			<h3>Is my blood pressure too high?</h3>
-			<p>Enter some blood pressure readings and we'll answer that question right away!</p>
-			<div id='input_bp'>
-				<%= render 'current_bps/form' %>
-				
-				<div class='clear_float'>
-				</div>
-				
-			</div>
+			<%= render 'info/is_my_bp_too_high' %>
 		</div>
 	</div>
 	
@@ -31,17 +23,17 @@
 		<div id='links'>
 			<%= link_to(info_how_do_i_measure_my_blood_pressure_path, :class => 'info_link') do %>
 				<span id='link_title_1'><span id='link_title_content_1'>How do I measure my blood pressure?</span></span>
-				<%= image_tag("heart_bp_monitor_small.jpg", size: '118x100') %>
+				<%= image_tag("heart_bp_monitor_small.jpg") %>
 				<span class='link_text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.</span>
 			<% end %>
 			<%= link_to(info_when_should_i_measure_my_blood_pressure_path, :class => 'info_link') do %>
 				<span id='link_title_2'><span id='link_title_content_2'>When should I measure my blood pressure?</span></span>
-				<%= image_tag("woman_taking_bp_small.jpg", size: '118x100') %>
+				<%= image_tag("woman_taking_bp_small.jpg") %>
 				<span class='link_text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.</span>
 			<% end %>
 			<%= link_to(info_how_do_i_choose_a_blood_pressure_machine_path, :class => 'info_link') do %>
 				<span id='link_title_3'><span id='link_title_content_3'>How do I choose a blood pressure machine?</span></span>
-				<%= image_tag("tablets_small.jpg", size: '118x100') %>
+				<%= image_tag("tablets_small.jpg") %>
 				<span class='link_text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.</span>
 			<% end %>
 			
