--- a/app/assets/stylesheets/info.css.scss
+++ b/app/assets/stylesheets/info.css.scss
@@ -250,15 +250,232 @@
             font-size:1em;
             color: #000000;
             padding: 15px 0px 0px 25px;
-            }
           }
+            
+          #feature_1 {
+            font-size:1.2em;
+            color: #0C59CF;
+            padding: 15px 0px 0px 25px;
+          }
+          
+          #feature_2 {
+            font-size:1.2em;
+            color: #0844A4;
+            padding: 15px 0px 0px 25px;
+          }
+        }
         
         #graphic {
           float: right;
           width: 200px;
-          border: 2px solid #000000;
-          height: 500px;
+          margin: 25px 25px 0px 25px;
+          
+          #average_bp {
+            position: relative;
+            width: 100%;
+            height: 300px;
+            border-style:solid;
+            border-width:2px;
+            border-color:#033076;
+            -webkit-border-radius:10px;
+            -moz-border-radius:10px;
+            border-radius:10px;
+            background-color:#ffffff;
+    
+            #bar {
+              width: 25px;
+              margin: 20px 0px 0px 40px;
+      
+              #redbar {
+                background-color:#e61610;
+                width: 25px;
+                height: 70px;
+              }
+      
+              #amberbar {
+                background-color:#ffb253;
+                width: 25px;
+                height: 70px;
+              }
+      
+              #greenbar {
+                background-color:#72bb53;
+                width: 25px;
+                height: 70px;
+              }
+            }
+    
+            #readout {
+              z-index: 1;
+              position: absolute;
+              left: 20px;
+      
+              #line {
+                float: left;
+                border-style:solid;
+                border-width:2px;
+                border-color:#000000;
+                background-color: #000000;
+                height: 1px;
+                width: 60px;
+              }
+      
+              #reading {
+                float: left;
+                margin-top: -30px;
+                width: 70px;
+                border-style:solid;
+                border-width:2px;
+                border-color:#000000;
+                -webkit-border-radius:7px;
+                -moz-border-radius:7px;
+                border-radius:7px;
+                background-color:#ffffff;
+                color:#000000;
+                font-size: 12pt;
+                text-align: center;
+                padding: 7px;
+        
+                #mmHg {
+                  font-size: 10pt;
+                  text-align: center;
+                }
+              }
+            }
+          }
+          
+          #reading_counter {
+            width: 100%;
+            height: 145px;
+            //float: right;
+            margin-top: 20px;
+            border-style:solid;
+            border-width:2px;
+            border-color:#033076;
+            -webkit-border-radius:10px;
+            -moz-border-radius:10px;
+            border-radius:10px;
+            background-color:#ffffff;
+        
+            p {
+              margin: 5px 10px 5px 10px;
+              font-size: 8pt;
+              text-align: center;
+              line-height: 14px;
+            }
+        
+            #reading_counter_bar {
+              float:left;
+              margin: 10px 0px 10px 6px;
+              border-style:solid;
+              border-width:2px;
+              border-color:#72bb53;
+          
+              .reading_taken, .reading_not_taken {
+                float:left;
+                width: 22px;
+                height: 25px;
+                border-right: 1px solid #ffffff;
+                text-align: center;
+                font-size: 14pt;
+                color: #aedd94;
+                padding-top: 6px;
+              }
+          
+              .reading_taken{
+                background-color: #72bb53;
+              }
+          
+              .reading_not_taken {
+                background-color: #ffffff;
+              }
+            }      
+          }
         }
+      }
+    }
+    
+    #strip5 {
+      width: 100%;
+      background-color: #D4E3FC;
+      margin-bottom: 30px;
+      
+      #strip5_content {
+        width: 90%;
+        max-width: 1000px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-bottom: 30px;
+        
+        p {
+          font-size:1em;
+          color: #000000;
+          padding: 15px 0px 0px 25px;
+        }
+      }
+    }
+    
+    #nav_form {
+      padding: 20px 25px 0px 50px;
+      max-width: 400px;
+      
+      h4 {
+        font-size:1.6em;
+        color: #0844A4;
+        padding: 0px 0px 15px 0px;
+      }
+      
+      table {
+        margin-left: 50px;
+      }
+      
+      td {
+        padding: 0px 20px 5px 0px;
+      }
+      
+      #tac_msg {
+        vertical-align: top;
+      }
+      
+      #tac_error_msg {
+        float:left;
+        text-align: center;
+        margin: 5px 0px 5px 0px;
+        color: #ff0000;
+      }
+      
+      #sign_up_button {
+        //float:left;
+        padding: 10px 0px 20px 100px;
+      }
+      
+      #sign_in_button {
+        padding: 10px 0px 20px 80px;
+      }
+        
+      #forgot_pwd_button {
+        float: left;
+        padding: 10px 0px 20px 50px;
+        font-size: 10pt;
+      }
+        
+      #change_pwd_button {
+        float: left;
+        padding: 10px 0px 20px 90px;
+        font-size: 10pt;
+      }
+      
+      #forgot_pwd_txt {
+        text-align:center;
+      }
+        
+      #user_email, #user_password, #user_password_confirmation {
+        width: 160px;
+      }
+        
+      #error_explanation {
+        width: 390px;
+        margin-left: 40px;
       }
     }
   }
