--- a/app/views/account/home.html.erb
+++ b/app/views/account/home.html.erb
@@ -12,8 +12,15 @@
 	
 	<div id='strip4'>
 		<div id='strip4_content'>
-						<div id='graphic'>
-				
+			<div id='graphic'>
+				<% if !@average_sysbp.nil? %>
+					<div id='average_bp'>
+						<%= render :partial => 'average_bp', :locals => {:avsys => @average_sysbp, :avdia => @average_diabp, :bppos => @bp_position} %>
+					</div>
+					<div id='reading_counter'>
+						<%= render :partial => 'reading_counter' %>
+					</div>	
+				<% end %>
 			</div>
 			<div id='text'>
 				<% if bp_warning_message(@current_average_bp) %>
@@ -25,11 +32,19 @@
 			<% end %>
 	
 			<p>...However, to get a more accurate picture of what your blood pressure is like you need to take more readings like this <span><%= time_left %></span>. This is because your blood pressure will vary from hour to hour, so one or two readings can be misleading. By taking more readings, you will get more accurate advice from this site.</p>
+			
+			<% if !user_signed_in? %>
+				<p id='feature_1'>You can be guided through this process by us... we'll make it easy.</p>
+				<p id='feature_2'>You can control your own blood pressure at home.</p>
+			<% end %>
 			</div>
-			
 
-			
-			
+		</div>
+	</div>
+	
+	<div id='strip5'>
+		<div id='strip5_content'>
+			<%= render :partial => 'devise/registrations/new' %>
 		</div>
 	</div>
 	
