--- a/app/views/devise/registrations/_new.html.erb
+++ b/app/views/devise/registrations/_new.html.erb
@@ -1,8 +1,7 @@
-<div id='title'>
-	Sign up
-</div>
-
 <div id='nav_form'>
+
+	<h4>Sign up</h4>
+
 	<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :onsubmit => "return checktc();"}) do |f| %>
 	<table>
 		<tr>
