--- a/app/assets/stylesheets/info.css.scss
+++ b/app/assets/stylesheets/info.css.scss
@@ -10,7 +10,7 @@
         margin-left: auto;
         margin-right: auto;
         padding-bottom: 30px;
-        
+        padding-left: 5%;   
       
         h2 {
           font-size:2em;
@@ -268,12 +268,13 @@
         #graphic {
           float: right;
           width: 200px;
-          margin: 25px 25px 0px 25px;
+          margin: 25px 25px 0px 0px;
           
           #average_bp {
             position: relative;
             width: 100%;
             height: 300px;
+            margin-left:25px;
             border-style:solid;
             border-width:2px;
             border-color:#033076;
@@ -347,8 +348,9 @@
           #reading_counter {
             width: 100%;
             height: 145px;
-            //float: right;
             margin-top: 20px;
+            margin-left: 25px;
+            margin-bottom: 25px;
             border-style:solid;
             border-width:2px;
             border-color:#033076;
@@ -416,7 +418,7 @@
     }
     
     #nav_form {
-      padding: 20px 25px 0px 50px;
+      padding: 20px 0px 0px 6%;
       max-width: 400px;
       
       h4 {
@@ -426,7 +428,7 @@
       }
       
       table {
-        margin-left: 50px;
+        margin-left: 10%;
       }
       
       td {
@@ -435,6 +437,10 @@
       
       #tac_msg {
         vertical-align: top;
+        
+        td {
+          font-size: 0.9em;
+        }
       }
       
       #tac_error_msg {
@@ -446,7 +452,7 @@
       
       #sign_up_button {
         //float:left;
-        padding: 10px 0px 20px 100px;
+        padding: 10px 0px 20px 20%;
       }
       
       #sign_in_button {
