--- a/app/assets/stylesheets/info.css.scss
+++ b/app/assets/stylesheets/info.css.scss
@@ -399,6 +399,7 @@
     
     #strip5 {
       width: 100%;
+      min-height: 370px;
       background-color: #D4E3FC;
       margin-bottom: 30px;
       
@@ -413,6 +414,14 @@
           font-size:1em;
           color: #000000;
           padding: 15px 0px 0px 25px;
+        }
+        
+        #return_notice {
+          font-size:1.2em;
+          color: #0844A4;
+          padding: 25px 0px 0px 0px;
+          max-width: 500px;
+          margin: 0px 3% 0px 10%;
         }
       }
     }
