css for sign-in and sign-up

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -222,7 +222,7 @@ a.button2:hover {
   -webkit-border-radius:7px;
   -moz-border-radius:7px;
   border-radius:7px;
-  background-color:#D4E3FC;
+  background-color:#e7f0fd;
   font-size: 12pt;
   cursor:pointer;
   &:hover {
