--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
   		<div id='topmenu'>
 			<% if user_signed_in? %>
 			<div class='topmenucontent'>
-				<%= link_to 'Account home', root_path(@bp_entry_details) %>
+				<%= link_to 'Account home', root_path %>
 			</div>
 			<div class='topmenucontent'>
 				<%= link_to 'Advice', info_home_page_path %>
